--- a/tex/modules/1-E/sections/0.tex
+++ b/tex/modules/1-E/sections/0.tex
@@ -105,7 +105,7 @@ Its \term{solution set} is given by
           its solution set contains infinitely many vectors, e.g.
           \(
             \left\{
-              \begin{bmatrix}1\\a\\3-a\end{bmatrix}
+              \begin{bmatrix}1\\2-3a\\a\end{bmatrix}
             \,\middle|\,
               a\in\IR
             \right\}
