Add whitespace to a couple wordy slides in module E

--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -269,10 +269,15 @@ pivots in the RREF examples.
 \begin{remark}
 It is important to understand the \term{Gauss-Jordan elimination} algorithm
 that converts a matrix into reduced row echelon form.
+
+\vspace{0.5in}
+
 A video outlining how to perform the Gauss-Jordan Elimination algorithm
 by hand is available at \url{https://youtu.be/Cq0Nxk2dhhU}.
 Practicing several exercises outside of class using this method is
 recommended.
+
+\vspace{0.5in}
 
 In the next section, we will learn to use technology to perform this
 operation for us, as will be expected when applying row-reduced
