--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -28,6 +28,8 @@ are available online.
 If you need to find the reduced row echelon form of a matrix during class, you
 are encouraged to use CoCalc's Octave interpreter.
 
+\vspace{0.2in}
+
 You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments
 around your calculations such as Activity numbers.
 \end{remark}
@@ -121,9 +123,13 @@ Which of these was easier?  What features of the RREF matrix
 Recall that the pivots of a matrix in \(\RREF\) form are the leading
 \(1\)s in each non-zero row.
 
+\vspace{0.2in}
+
 The pivot columns in an augmented matrix correspond to the
 \term{bound variables} in the system of equations.
 The remaining variables are called \term{free variables}.
+
+\vspace{0.2in}
 
 To efficiently solve a system in RREF form, we may assign letters to free
 variables and solve for the bound variables.
