--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -83,7 +83,7 @@
   solution set.
 
   For example, both of these systems share the same solution set
-  \(\left\{ \begin{bmatrix} 1 \\ 1\end{bmatrix}\right\}\).
+  \(\setList{ \begin{bmatrix} 1 \\ 1\end{bmatrix} }\).
 
   \begin{multicols}{2}\noindent
     \begin{alignat*}{3}
