--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -89,21 +89,23 @@ from the previous problem:
 \begin{subactivity}
 Let \(x_1=a\) and write the solution set in the form
 \(
-  \left\{
+  \setBuilder
+  {
     \begin{bmatrix} a \\ \unknown \\ \unknown \end{bmatrix}
-  \,\middle|\,
+  }{
     a \in \IR
-  \right\}
+  }
 \).
 \end{subactivity}
 \begin{subactivity}
 Let \(x_2=b\) and write the solution set in the form
 \(
-  \left\{
+  \setBuilder
+  {
     \begin{bmatrix} \unknown \\ b \\ \unknown \end{bmatrix}
-  \,\middle|\,
+  }{
     b \in \IR
-  \right\}
+  }
 \).
 \end{subactivity}
 \begin{subactivity}
@@ -149,7 +151,8 @@ x_1&\,-\,&2x_2&\,-\,&x_3&\,+\,&x_4&\,+\,&x_5 &\,=\,& 2
 \end{alignat*}
 may be written as
 \[
-  \left\{
+  \setBuilder
+  {
     \begin{bmatrix}
       1+5a+2b \\
       1+2a+3b \\
@@ -157,9 +160,9 @@ may be written as
       3+3b \\
       b
     \end{bmatrix}
-  \,\middle|\,
+  }{
     a,b\in \IR
-  \right\}
+  }
 .\]
 \end{observation}
 
@@ -169,14 +172,15 @@ using set-builder notation for consistent systems with
 infintely many solutions.
   \begin{itemize}
   \item \textbf{Consistent with one solution}: e.g.
-        \(\left\{\begin{bmatrix}1\\2\\3\end{bmatrix}\right\}\)
+        \(\setList{ \begin{bmatrix}1\\2\\3\end{bmatrix} }\)
   \item \textbf{Consistent with infinitely-many solutions}: e.g.
         \(
-          \left\{
+          \setBuilder
+          {
             \begin{bmatrix}1\\2-3a\\a\end{bmatrix}
-          \,\middle|\,
+          }{
             a\in\IR
-          \right\}
+          }
         \)
   \item \textbf{Inconsistent}: \(\emptyset\)
   \end{itemize}
