--- a/tex/modules/1-E/exercises/E3.tex
+++ b/tex/modules/1-E/exercises/E3.tex
@@ -1,20 +1,24 @@
 \begin{problem}{E3}
-Solve the system of equations
+Find the solution set for the following system of linear equations.
 \begin{align*}
 x+3y-4z &= 5 \\
 3x+9y+z &= 2
 \end{align*}
 \end{problem}
 \begin{solution}
-$$\RREF \left(\begin{bmatrix}[ccc|c] 1 & 3 & -4 & 5 \\ 3 & 9 & 1 & 2 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & -1\end{bmatrix}$$
+\[
+  \RREF \left(\begin{bmatrix}[ccc|c] 1 & 3 & -4 & 5 \\ 3 & 9 & 1 & 2 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & -1\end{bmatrix}
+\]
 So the solution set is
-$$\left\{ \begin{bmatrix} 1-3c \\ c \\ -1 \end{bmatrix} \bigg|\ c \in \IR \right\}$$
+\[
+  \left\{ \begin{bmatrix} 1-3c \\ c \\ -1 \end{bmatrix} \bigg|\ c \in \IR \right\}
+\]
 \end{solution}
 
 
 
 \begin{problem}{E3}
-Solve the system of equations
+Find the solution set for the following system of linear equations.
 \begin{align*}
 -3x +y &= 2\\
 -8x+2y-z &= 6 \\
@@ -26,11 +30,12 @@ Solve the system of equations
 
 \begin{solution}
 $$\RREF\left(\begin{bmatrix}[ccc|c] -3 & 1 & 0 & 2 \\ -8 & 2 & -1 & 6 \\ 0 & 2 & 3 & -2 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & \frac{1}{2} & -1 \\ 0 & 1 & \frac{3}{2} & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-The solutions are $$\left\{ \begin{bmatrix} -1-\frac{c}{2} \\ -1-\frac{3c}{2} \\ c \end{bmatrix}\ \bigg|\ c\in \IR\right\} = \left\{ \begin{bmatrix} c-1 \\ 3c-1 \\ -2c  \end{bmatrix}\ \bigg|\ c\in \IR\right\}$$
+So the solution set is
+$$\left\{ \begin{bmatrix} -1-\frac{c}{2} \\ -1-\frac{3c}{2} \\ c \end{bmatrix}\ \bigg|\ c\in \IR\right\} = \left\{ \begin{bmatrix} c-1 \\ 3c-1 \\ -2c  \end{bmatrix}\ \bigg|\ c\in \IR\right\}$$
 \end{solution}
 
 \begin{problem}{E3}
-Solve the system of linear equations.
+Find the solution set for the following system of linear equations.
 \begin{align*}
 2x+y-z+w &=5 \\
 3x-y-2w &= 0 \\
@@ -39,11 +44,11 @@ Solve the system of linear equations.
 \end{problem}
 \begin{solution}
 $$\RREF\left( \begin{bmatrix}[cccc|c] 2 & 1 & -1 & 0 & 5 \\ 3 & -1 & 0 & -2 & 0 \\ -1 & 0 & 5 & 0 & -1 \end{bmatrix} \right) = \begin{bmatrix}[cccc|c] 1 & 0 & 0 & -\frac{1}{12} & 1 \\ 0 & 1 & 0 & \frac{7}{4} & 3 \\ 0 & 0 & 1 & \frac{7}{12} & 0 \end{bmatrix}$$
-So the solutions are $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
+So the solution set is $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
 \end{solution}
 
 \begin{problem}{E3}
-Solve the system of linear equations.
+Find the solution set for the following system of linear equations.
 \begin{align*}
 2x+y-z+w &=5 \\
 3x-y-2w &= 0 \\
@@ -52,7 +57,7 @@ Solve the system of linear equations.
 \end{problem}
 \begin{solution}
 $$\RREF\left( \begin{bmatrix}[cccc|c] 2 & 1 & -1 & 0 & 5 \\ 3 & -1 & 0 & -2 & 0 \\ -1 & 0 & 5 & 0 & -1 \end{bmatrix} \right) = \begin{bmatrix}[cccc|c] 1 & 0 & 0 & -\frac{1}{12} & 1 \\ 0 & 1 & 0 & \frac{7}{4} & 3 \\ 0 & 0 & 1 & \frac{7}{12} & 0 \end{bmatrix}$$
-So the solutions are $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
+So the solution set is $$\left\{ \begin{bmatrix} 1+a \\ 3-21a \\ -7a \\ 12a \end{bmatrix}\ \big|\ a \in \IR\right\}$$
 \end{solution}
 
 \begin{problem}{E3}
@@ -76,14 +81,13 @@ Let \(A =
     0 & 1 & -1 & 0 & 3 \\
     0 & 0 & 0 & 1 & -1
   \end{bmatrix}
-\). It follows that the solution set is given by \(
+\). It follows that the solution set is given by \(\left\{
   \begin{bmatrix}
     2 - 2a \\
     3 + a \\
     a \\
     -1
-  \end{bmatrix}
-\) for all real numbers \(a\).
+  \end{bmatrix}\,\middle|\,a\in\IR\right\}\).
 \end{solution}
 
 \begin{problem}{E3}
@@ -104,18 +108,17 @@ Let \(A =
     1 & 0 & 2 & 1 & 1 \\
     0 & 1 & -3 & 4 & 2 \\
   \end{bmatrix}
-\). It follows that the solution set is given by \(
+\). It follows that the solution set is given by \(\left\{
   \begin{bmatrix}
     1 - 2a - b \\
     2 + 3a - 4b \\
     a \\
     b
-  \end{bmatrix}
-\) for all real numbers \(a,b\).
+  \end{bmatrix}\,\middle|\,a,b\in\mathbb{R}\right\}\).
 \end{solution}
 
 \begin{problem}{E3}
-Solve the following linear system.
+Find the solution set for the following system of linear equations.
 \begin{align*}
 4x_1+4x_2+3x_3-6x_4 &= 5 \\
 -2x_3-4x_4 &= 3 \\
@@ -136,11 +139,12 @@ Let \(A =
     0 & 0 & 0 & 0 & 1
   \end{bmatrix}
 \). It follows that the system is inconsistent with no solutions
-(since the bottom row implies the contradiction \(0=1\)).
+(since the bottom row implies the contradiction \(0=1\)), so
+its solution set is \(\emptyset\).
 \end{solution}
 
 \begin{problem}{E3}
-Solve the following linear system.
+Find the solution set for the following system of linear equations.
 \begin{align*}
 3x+2y+z &= 7 \\
 x+y+z &= 1 \\
@@ -160,8 +164,8 @@ Let \(A =
     0 & 1 & 0 & -2 \\
     0 & 0 & 1 & -1
   \end{bmatrix}
-\). It follows that the system has exactly one solution:
-\(\begin{bmatrix}
-  4 & -2 & -1
-\end{bmatrix}\)
+\). It follows that solution set is
+\(\left\{\begin{bmatrix}
+  4 \\ -2 \\ -1
+\end{bmatrix}\right\}\)
 \end{solution}
