add intro handout

--- a/tex/modules/0-I/index.tex
+++ b/tex/modules/0-I/index.tex
@@ -5,7 +5,7 @@
 \end{remark}
 
 
-\begin{applicationActivities}{1}{1}
+\begin{applicationActivities}
 
 \begin{remark} \textbf{What is Linear Algebra?}
 
