--- a/tex/homework.tex
+++ b/tex/homework.tex
@@ -20,37 +20,32 @@ For each standard, I list in \closeExamples{bold} practice problems that will mo
     \otherExamples{11-18},
     \closeExamples{19-32}
 
-  \standards{E4:} \S 1.2
-    \closeExamples{20,25}
+%  \standards{E4:} \S 1.2
+%    \closeExamples{20,25}
 
-  \standards{V1:} \S 7.1
-    \otherExamples{1-7},
-    \closeExamples{9-12}
+  \standards{V1,V2:} \S 7.1
+    \otherExamples{1-12}
 
-  \standards{V2:} \S 2.1
+  \standards{V3:} \S 2.1
     \closeExamples{31-36}
     | \S 2.2
-    \otherExamples{1-6},
     \closeExamples{7-12}
-    | \S 7.2
-    \closeExamples{1-16}
 
-  \standards{V3:} \S 2.2
+  \standards{V4:} \S 2.2
     \closeExamples{21-28}
 
-  \standards{V4:} \S 4.1
+  \standards{V5:} \S 4.1
     \closeExamples{1-16},
     \otherExamples{17-20}
     | \S 7.1
-    \closeExamples{13-16},
+    \otherExamples{13-16},
     \otherExamples{18-25}
 
   \standards{S1:} \S 2.3
     \closeExamples{1-12},
     \otherExamples{19-28}
     | \S 7.2
-    \closeExamples{17-24},
-    \otherExamples{25-26}
+    \otherExamples{17-26}
 
   \standards{S2:}
     \closeExamples{\textbf{V3} and \textbf{S1} exercises}
@@ -66,16 +61,20 @@ For each standard, I list in \closeExamples{bold} practice problems that will mo
     | \S 7.3
     \otherExamples{13-15,18}
 
+   \standards{S5:} \S 7.1 \closeExamples{13-32} | \S 7.2 \closeExamples{1-26} | \S 7.3 \closeExamples{7-20,25-26}
+
+   \standards{S6:} \S 1.2 \closeExamples{20,25}
+
   \standards{A1:} \S 3.1 \closeExamples{13-20} | \S 9.3 \closeExamples{19-21}, \otherExamples{22-30}
   \standards{A2:} \S 3.1 \closeExamples{13-20} | \S 9.1 \closeExamples{5-22}
   \standards{A3:} \S 3.1 \closeExamples{21-28} | \S 9.1 \closeExamples{27-30} | \S 9.2 \otherExamples{1-22}
   \standards{A4:} \S 3.1 \otherExamples{5-8} | \S 9.1 \closeExamples{23-26}
   \standards{M1:} \S 3.2 \closeExamples{1-6}, \otherExamples{7-36}
   \standards{M2,M3:} \S 3.3 \closeExamples{1-16}, \otherExamples{17-28}
-  \standards{G1:} \S 5.1 \closeExamples{11-18}, \otherExamples{19-40,45-52} | \S 5.2 \otherExamples{7-18}
-  \standards{G2:} \S 6.1 \otherExamples{7-10}, \closeExamples{21-30}
-  \standards{G3:} \S 6.1 \otherExamples{1-6}, \closeExamples{11-30}
-  \standards{G4:} \S 6.1 \otherExamples{11-30}
+  \standards{G1:} \S 5.2 \closeExamples{7-18}
+  \standards{G2:} \S 5.1 \closeExamples{11-18}, \otherExamples{19-40,45-52} | \S 5.2 \otherExamples{7-18}
+  \standards{G3:} \S 6.1 \otherExamples{7-10}, \closeExamples{21-30}
+  \standards{G4:} \S 6.1 \otherExamples{1-6}, \closeExamples{11-30}
 \end{enumerate}
 
 \end{document}
