minor revisions (e.g. use exercise vs problem to match rest of repo)

--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -2,7 +2,6 @@
 \usepackage{tbil-la}
 \usepackage[top=1in,bottom=1in,right=1in,left=1in]{geometry}
 
-\newcommand*{\stdList}{}
 %Problem environment -- takes an argument which is the standard
 \newenvironment{problem}[1]
 %before
@@ -10,7 +9,7 @@
 	\begin{flushleft}
 	%{\bfseries \arabic{problem} .}
 	%Problem numbering by standard
-	{\bfseries {#1}. }
+	\textbf{#1}.
 	\ignorespaces
 }
 %after
@@ -22,7 +21,7 @@
 %before
 {
 	\ignorespaces
-	{\bf Solution: }
+	\textbf{Solution:}
 }
 %after
 {
@@ -37,11 +36,11 @@
 \begin{document}
 
 \begin{center}
-\Large \textbf{Sample Assessment Problems}
+\Large \textbf{Sample Assessment Exercises}
 \end{center}
 
-This document contains one problem and solution for each standard.  
-The goal is to give you an idea of what the problems will look like, 
+This document contains one exercise and solution for each standard.
+The goal is to give you an idea of what the exercises might look like,
 and what the expectations for a complete solution are.
 
 \begin{problem}{E1}
@@ -90,31 +89,31 @@ Put the following matrix in reduced row echelon form.
 	\begin{bmatrix}
 	\circledNumber{1} & 2 & -1 & -3 \\
 	0 & 3 & 1 & 2 \\
-	0 & 0 & 1 & 5 
+	0 & 0 & 1 & 5
 	\end{bmatrix}
 	&\sim&
 	\begin{bmatrix}
 	\circledNumber{1} & 2 & -1 & -3 \\
 	0 & \circledNumber{1} & \frac{1}{3} & \frac{2}{3} \\
-	0 & 0 & 1 & 5 
+	0 & 0 & 1 & 5
 	\end{bmatrix} \\
 	&\sim&
 	\begin{bmatrix}
 	\circledNumber{1} & 0 & -\frac{5}{3} & -\frac{13}{3} \\
 	0 & \circledNumber{1} & \frac{1}{3} & \frac{2}{3} \\
-	0 & 0 & \circledNumber{1} & 5 
+	0 & 0 & \circledNumber{1} & 5
 	\end{bmatrix}
 	&\sim&
 	\begin{bmatrix}
 	\circledNumber{1} & 0 & -\frac{5}{3} & -\frac{13}{3} \\
 	0 & \circledNumber{1} & 0 & -1 \\
-	0 & 0 & \circledNumber{1} & 5 
+	0 & 0 & \circledNumber{1} & 5
 	\end{bmatrix}
 	&\sim&
 	\begin{bmatrix}
 	\circledNumber{1} & 0 & 0 & 4 \\
 	0 & \circledNumber{1} & 0 & -1 \\
-	0 & 0 & \circledNumber{1} & 5 
+	0 & 0 & \circledNumber{1} & 5
 	\end{bmatrix}
 \end{alignat*}
 \end{solution}
@@ -128,21 +127,24 @@ x&\,+\,&2y &\,\,& &= 3
 \end{problem}
 \begin{solution}
 \[
-  \RREF \left(\begin{bmatrix}[ccc|c] 2 & 4 & 1 & 5 \\ 1 & 2 & 0 & 3 \end{bmatrix} \right) = 
+  \RREF \left(
+		\begin{bmatrix}[ccc|c] 2 & 4 & 1 & 5 \\ 1 & 2 & 0 & 3 \end{bmatrix}
+	\right)
+		=
   \begin{bmatrix}[ccc|c] 1 & 2 & 0 & 3 \\ 0 & 0 & 1 & -1\end{bmatrix}
 \]
-This corresponds to the system 
+This corresponds to the system
 \begin{alignat*}{2}
 x\,+\,2y&\,\,&  &= 3 \\
   &\,\,& z&= -1
 \end{alignat*}
-Since the $y$-column is a non-pivot column, it is a free variable, so we let $y=a$; then we have 
+Since the $y$-column is a non-pivot column, it is a free variable, so we let $y=a$; then we have
 \begin{alignat*}{3}
 x&\,+\,&2y&\,\,&  &= 3 \\
  &\,\,&y &\,\,& &=a \\
  &\,\,& &\,\,& z&= -1
 \end{alignat*}
-and thus 
+and thus
 \begin{align*}
 x&= 3-2a \\
 y&= a \\
@@ -150,7 +152,11 @@ z&= -1
 \end{align*}
 So the solution set is
 \[
-  \left\{ \begin{bmatrix} 3-2a \\ a \\ -1 \end{bmatrix} \,\middle|\, a \in \IR \right\}
+  \setBuilder{
+		\begin{bmatrix} 3-2a \\ a \\ -1 \end{bmatrix}
+	}{
+		a \in \IR
+	}
 \]
 \end{solution}
 
