Module E facilitator notes, addresses #72

--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -12,7 +12,7 @@
 
 These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.
 
-The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.
+The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  Additionally, there is an introduction day (labeled Module I) for the first day of class, and two days of applied activities (labeled Module 7-X) for the end of the semester, though these lack readiness assurance processes and are not full modules. 
 
 \begin{enumerate}
 \item [1-E] Systems of Equations
@@ -22,6 +22,36 @@ The course consists of 6 modules, listed below; here they are optimized for 29 7
 \item [5-M] Algebraic Structure of Matrices
 \item [6-G] Geometric Properties of Linear Maps
 \end{enumerate}
+
+\subsection*{Module 1-E: Systems of Linear Equations}
+This module explores how to solve arbitrarily large systems of linear equations.  We emphasize how to write the solution set using set-builder notation, and introduce the students to CoCalc (using the Octave kernel) to perform computation (the choice of Octave is somewhat arbitrary but motivated by request of our engineering faculty, who use Matlab).  
+
+RAT answers (IF-AT card B005, 1-10):
+\begin{multicols}{10}
+\begin{enumerate}[1)]
+\item C
+\item A
+\item D
+\item D
+\item B
+\item A
+\item A
+\item C
+\item D
+\item B
+\end{enumerate}
+\end{multicols}
+
+\subsubsection*{Part 0}
+This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  After introducing some notation, we begin by exploring systems of two equations in two variables, which students learn how to solve (using e.g. back-substitution) in high school algebra.  We quickly move on to infinite solution sets with activity E.0.8 and begin introducing students to set-builder notation.
+
+
+\subsubsection*{Part 1}
+We begin this part by quickly introducing augmented matrix notation.  We then begin building fluency in this new language through activity E.1.5; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We list 10 minutes for team's working on this activity, but we often spend another 5 minutes in intra-team discussion as well.  E.1.7 introduces the students to the Gauss-Jordan algorithm; rather than belabor this in class, we provide extra videos and emphasize to students that this particular skill is to be learned and practiced in the individual space.  This allows us to go ahead and begin using technology in the next part.
+
+\subsubsection*{Part 2}
+This part begins getting students familiar with the CoCalc environment (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.2.6.
+
 
 \subsection*{Module 6-G: Geometric properties of linear maps}
 
